<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:style="@style/CardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_start"
    app:cardCornerRadius="@dimen/cardview_radius">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/label_title"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/text_author_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/label_author"
            android:textAppearance="@android:style/TextAppearance.Material"
            app:layout_constraintEnd_toEndOf="@+id/text_title_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_title_view"
            app:layout_constraintTop_toBottomOf="@+id/text_title_view" />


        <TextView
            android:id="@+id/text_entry_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/label_text_entry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/text_author_view"
            app:layout_constraintTop_toBottomOf="@+id/text_author_view"
            app:layout_constraintVertical_bias="0.495" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_edit_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_start"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@android:drawable/ic_menu_edit" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>